fix line spacing in over text

--- a/public/css/src/sections/overview.less
+++ b/public/css/src/sections/overview.less
@@ -1,6 +1,7 @@
 
 #overview p {
     font-size: 10pt;
+    line-height: 140%;
     @media(min-width: @screen-xs-min) { font-size: 11pt; }
     @media(min-width: @screen-sm-min) { font-size: 11pt; }
     @media(min-width: @screen-md-min) { font-size: 13pt; }
